# ipython-memory-magics

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tests.ipynb  tox.ini
.github/workflows/: ci.yml
memory_magics/: __init__.py  _version.py  memory_magics.py  utils.py
memory_magics/memory_tracer/: __init__.py  _memory_tracer.py  context_memory_tracer.py
memory_magics/utils/: jupyter.py  print.py
tests/: conftest.py  test_version.py
tests/test_cell/: test_cell.py  test_micro.py
tests/test_line/: test_line.py  test_micro.py  test_options.py  test_sequence.py
