[tool.poetry]
name = "ipython-memory-magics"
version = "0.3.7"
description = "IPython magic commands for tracking memory usage"

license = "MIT"

authors = [
    "Ruslan Mukhametshin <rusmux21@gmail.com>"
]

readme = "README.md"
homepage = "https://github.com/rusmux/ipython-memory-magics"

keywords = ["memory", "profiler", "jupyter", "magic"]

packages = [{ include = "memory_magics" }]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
notebook = "^6.5.2"
psutil = "^5.9.3"
ipython = "^8.5.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.1"
coverage = "^7.1.0"
pre-commit = "^3.0.4"

[tool.black]
# for pre-commit hooks
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
# for pre-commit hooks
profile = 'black'
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
